# YmlReader

./: .gitignore  CMakeLists.txt  CalData.cpp  CalData.hpp  CameraModel.hpp  CapturePositionConfig.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigTags.hpp  TargetConfigData.hpp  TextureConfigData.cpp  TextureConfigData.hpp  main.cpp  test_output.yml
